src/css-dev/molecules/_sectionFooter.scss
.sectionFooter {

   &__nav {
      align-items: center;
      bottom: -1rem;
      display: grid;
      gap: 15px;
      grid-auto-columns: max-content;
      grid-auto-flow: column dense;
      position: fixed;
      right: 0;
      transform-origin: 100% 0;
      transform: rotate(90deg);
      z-index: 800;

      &:focus-within {
         @include focus-style();
      }
   }

   &__navLink {
      @include pseudo-link();
      @include theme-text();
      font-size: var(--fontSize-10);
      font-weight: 600;
      text-transform: uppercase;

      @include breakpoint( md ) {
         font-size: var(--fontSize-14);
      }

      @include breakpoint( xl ) {
         font-size: var(--fontSize-16);
      }

      &:focus {
         outline: none;
      }
   }

   &__navIcon {
      @include svg-contain( 40px, 40px );
      color: currentColor;
      transform: rotate( 270deg );
      transition: transform 300ms ease-in-out;

      @include breakpoint( sm ) {
         @include svg-contain( 60px, 60px );
      }

      &.-reverse {
         transform: rotate( 450deg );
      }

      > svg {
         @include theme-text();
      }
   }
}

